@@ -7,7 +7,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # 
-# RCS: @(#) $Id: export_nroff.tcl,v 1.2 2009/04/29 02:10:57 andreas_kupries Exp $
+# RCS: @(#) $Id: export_nroff.tcl,v 1.3 2009/08/07 18:52:13 andreas_kupries Exp $
 
 # This package is a plugin for the doctools::toc v2 system.  It takes
 # the list serialization of a keyword index and produces text in nroff
@@ -15,6 +15,8 @@
 
 # ### ### ### ######### ######### #########
 ## Requisites
+
+# @mdgen NODEP: doctools::toc::export::plugin
 
 package require Tcl 8.4
 package require doctools::toc::export::plugin ; # Presence of this
